feat: hide toggle all button when no todos

--- a/app/style.css
+++ b/app/style.css
@@ -10,6 +10,9 @@ main {
 button.toggleAll {
   width: 40px;
 }
+button.toggleAll:not(:has(~ .item)) {
+  visibility: hidden;
+}
 input.addItem {
   width: calc(100% - 40px)
 }
